Fixed bug #73916 (zend_print_flat_zval_r doesn't consider reference)